Feat: 新規登録時に入力した情報をマイページの各ビューで表示させる
新規登録時に入力した情報をマイページの各ビューで表示させる。
各inputタグのvalue属性にcurrent_userの値を取得するように記述を追加した。

--- a/app/views/share/_select-prefecture.html.haml
+++ b/app/views/share/_select-prefecture.html.haml
@@ -1,4 +1,4 @@
-%select{class: "select-prefecture__list"}
+%select{class: "select-prefecture__list", value: "#{@user.address.prefecture_id}"}
   %option 北海道
   %option 青森県
   %option 岩手県
