--- a/app/views/users/mypage.html.haml
+++ b/app/views/users/mypage.html.haml
@@ -13,7 +13,7 @@
             .user__icon
               = image_tag("member_photo_noimage_thumb.png", class: "user__icon-tag")
             .user__nickname
-              nanashi
+              = @user.nickname
             .user-content
               .user__reputation
                 評価
