--- a/app/views/users/prof.html.haml
+++ b/app/views/users/prof.html.haml
@@ -14,7 +14,7 @@
           -# .setting-prof__img
           = image_tag("member_photo_noimage_thumb.png", class: "setting-prof__img-tag" )
           -# .setting-prof__nickname
-          %input{class: "setting-introduction__nickname"}
+          %input{class: "setting-introduction__nickname", value: "#{@user.nickname}"}
         .setting-introduction
           %textarea{type: "text" ,class: "setting-introduction__sentence", placeholder: "例) こんにちは☆ ご覧いただきありがとうございます!かわいいものやきれいめオフィスカジュアルを中心に出品しています。服のサイズは主に9号です。気持ちよくお取引できるよう心がけていますので、商品や発送方法などのご質問がありましたらお気軽にどうぞ♪"}
         .setting-prof__send
