--- a/app/assets/stylesheets/items/index.scss
+++ b/app/assets/stylesheets/items/index.scss
@@ -3,18 +3,16 @@
   background-color: $mainBackgroundGray;
   padding-bottom: 40px;
   &__top-banner{
-    height: auto;
+    height: 100%;
     width: 100vw;
     &-picture {
-      height: auto;
       width: 100vw;
       a {
         display: block;
-        height: auto;
         width: 100%;
         img {
           display: block;
-          height: auto;
+          min-height: 390px;
           width: 100%;
         }
       }
