--- a/app/views/items/_footer.html.haml
+++ b/app/views/items/_footer.html.haml
@@ -1,6 +1,6 @@
 .footer
   .footer__banner
-    = image_tag("footer_banner.png",alt: "footer-banner",class: "footer__banner-img")
+    = image_tag("mercari-footer-bg.png",alt: "mercari-footer-bg",class: "footer__banner-img")
   .footer-main
     .footer-main-global
       .footer-main-cell
