--- a/app/views/users/prof.html.haml
+++ b/app/views/users/prof.html.haml
@@ -2,7 +2,7 @@
 
 .bread-crumps
   .item-scope
-    - breadcrumb :mypage
+    - breadcrumb :profile
     = breadcrumbs separator: " &rsaquo; "
 
 .my-page__body
