--- a/app/assets/stylesheets/modules/_bread-crumps.scss
+++ b/app/assets/stylesheets/modules/_bread-crumps.scss
@@ -7,9 +7,11 @@
     margin: auto;
     padding: 16px 0;
     font-size: 14px;
+    font-weight: bold;
     a {
       color: #333;
       text-decoration: none;
+      font-weight: normal;
     }
   }
 }
