--- a/app/assets/stylesheets/modules/_bread-crumps.scss
+++ b/app/assets/stylesheets/modules/_bread-crumps.scss
@@ -2,7 +2,7 @@
   clear: both;
   border-top: 1px solid #eee;
   box-shadow: 0 3px 3px 0 rgba(0,0,0,0.16);
-  .item-scope{
+  &__item {
     width: 1020px;
     margin: auto;
     padding: 16px 0;
