--- a/app/views/users/logout.html.haml
+++ b/app/views/users/logout.html.haml
@@ -1,6 +1,6 @@
 = render "items/header"
 .bread-crumps
-  .item-scope
+  .bread-crumps__item
     - breadcrumb :logout
     = breadcrumbs separator: " &rsaquo; "
 
