--- a/app/views/users/mypage.html.haml
+++ b/app/views/users/mypage.html.haml
@@ -1,7 +1,7 @@
 = render "items/header"
 
 .bread-crumps
-  .item-scope
+  .bread-crumps__item
     - breadcrumb :mypage
     = breadcrumbs separator: " &rsaquo; "
 
