--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -7,19 +7,102 @@
   .body-pickup
     .pickup__title
       ピックアップカテゴリー
-    -# 変数使えるようになったらeach文にする
-    = render 'pickup_content'
-    = render 'pickup_content'
-    = render 'pickup_content'
-    = render 'pickup_content'
+    .pickup-content
+      .pickup-content__title
+        = link_to 'レディース 新着アイテム', "/items" ,class: "pickup-content__title-link" ,method: :get
+      .pickup-content-items
+        -# 変数使えるようになったらeach文にする
+        = render 'itembox'
+        = render 'itembox'
+        = render 'itembox'
+        = render 'itembox'
 
+      = link_to '全ての商品を見る',"/items" ,class: "pick-up-content__view-all" ,method: :get
+
+    .pickup-content
+      .pickup-content__title
+        = link_to 'メンズ 新着アイテム', "/items" ,class: "pickup-content__title-link" ,method: :get
+      .pickup-content-items
+        -# 変数使えるようになったらeach文にする
+        = render 'itembox'
+        = render 'itembox'
+        = render 'itembox'
+        = render 'itembox'
+
+      = link_to '全ての商品を見る',"/items" ,class: "pick-up-content__view-all" ,method: :get
+
+    .pickup-content
+      .pickup-content__title
+        = link_to 'ベビー・キッズ 新着アイテム', "/items" ,class: "pickup-content__title-link" ,method: :get
+      .pickup-content-items
+        -# 変数使えるようになったらeach文にする
+        = render 'itembox'
+        = render 'itembox'
+        = render 'itembox'
+        = render 'itembox'
+
+      = link_to '全ての商品を見る',"/items" ,class: "pick-up-content__view-all" ,method: :get
+
+    .pickup-content
+      .pickup-content__title
+        = link_to 'コスメ・香水・美容 新着アイテム', "/items" ,class: "pickup-content__title-link" ,method: :get
+      .pickup-content-items
+        -# 変数使えるようになったらeach文にする
+        = render 'itembox'
+        = render 'itembox'
+        = render 'itembox'
+        = render 'itembox'
+
+      = link_to '全ての商品を見る',"/items" ,class: "pick-up-content__view-all" ,method: :get
 
     .pickup__title
       ピックアップブランド
-    -# 変数使えるようになったらeach文にする
-    = render 'pickup_content'
-    = render 'pickup_content'
-    = render 'pickup_content'
-    = render 'pickup_content'
+    .pickup-content
+      .pickup-content__title
+        = link_to 'シャネル 新着アイテム', "/items" ,class: "pickup-content__title-link" ,method: :get
+      .pickup-content-items
+        -# 変数使えるようになったらeach文にする
+        = render 'itembox'
+        = render 'itembox'
+        = render 'itembox'
+        = render 'itembox'
+
+      = link_to '全ての商品を見る',"/items" ,class: "pick-up-content__view-all" ,method: :get
+
+    .pickup-content
+      .pickup-content__title
+        = link_to 'ルイ ヴィトン 新着アイテム', "/items" ,class: "pickup-content__title-link" ,method: :get
+      .pickup-content-items
+        -# 変数使えるようになったらeach文にする
+        = render 'itembox'
+        = render 'itembox'
+        = render 'itembox'
+        = render 'itembox'
+
+      = link_to '全ての商品を見る',"/items" ,class: "pick-up-content__view-all" ,method: :get
+
+    .pickup-content
+      .pickup-content__title
+        = link_to 'シュプリーム 新着アイテム', "/items" ,class: "pickup-content__title-link" ,method: :get
+      .pickup-content-items
+        -# 変数使えるようになったらeach文にする
+        = render 'itembox'
+        = render 'itembox'
+        = render 'itembox'
+        = render 'itembox'
+
+      = link_to '全ての商品を見る',"/items" ,class: "pick-up-content__view-all" ,method: :get
+
+    .pickup-content
+      .pickup-content__title
+        = link_to 'ナイキ 新着アイテム', "/items" ,class: "pickup-content__title-link" ,method: :get
+      .pickup-content-items
+        -# 変数使えるようになったらeach文にする
+        = render 'itembox'
+        = render 'itembox'
+        = render 'itembox'
+        = render 'itembox'
+
+      = link_to '全ての商品を見る',"/items" ,class: "pick-up-content__view-all" ,method: :get
 
 = render 'footer'
