--- a/app/assets/stylesheets/items/sell.scss
+++ b/app/assets/stylesheets/items/sell.scss
@@ -23,7 +23,6 @@
           float: left;
           font-size: 16px;
           font-weight: bold;
-
         }
         &__mark{
           @include necessaryMark;
@@ -52,7 +51,6 @@
           &__text{
             font-size: 12px;
             font-weight: 400;
-
           }
         }
       }
@@ -118,7 +116,7 @@
              @include necessaryMark;
           }
         }
-        .dummy__input1{
+        .wide-categories__input{
           @include inputTag;
         }
         &__states{
@@ -259,6 +257,7 @@
               margin-bottom: 20px;
               height: 48px;
               background-color: #FFFFFF;
+              text-align: right;
             }
             &__yen-mark{
               float: right;
