--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -112,7 +112,7 @@
 
       = link_to '全ての商品を見る',"/items" ,class: "pick-up-content__view-all" ,method: :get
 
-  = link_to "/items", class: "footer-sell-btn" do
+  = link_to "/items/sell", class: "footer-sell-btn" do
     %p 出品
     %i.fa.fa-camera
 
