--- a/app/views/items/_itembox.html.haml
+++ b/app/views/items/_itembox.html.haml
@@ -1,11 +1,13 @@
 .pickup-content-items-box
   = link_to "/items" ,class: "pickup-content__title-link" do
+    -# 画像の変数化は保留
     = image_tag("m90055501397_1.jpg", alt: "商品", class: "pickup-content-items-box__img")
     .pickup-content-items-box-body
       .pickup-content-items-box-body__name
-        %h3 SLYセーターSLYセーターSLYセーターSLYセーターSLYセーターSLYセーターSLYセーター
+        %h3
+        = item.name
       .pickup-content-items-box-body__price
-        ¥ 1,500
+        = item.price
       .pickup-content-items-box-body__favorite
         = fa_icon 'heart-o', class: 'favorite--gray'
         .pickup-content-items-box-body__favorite-num
