--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -4,7 +4,7 @@
     = search_form_for(@q, url:items_search_path) do |f|
       = f.search_field :name_cont, placeholder: "キーワードから探す", class: "header-top__search"
       %button.icon-search{type:"submit"}
-        %i.fas.fa-search
+        = fa_icon 'search'
   .header-bottom
     .header-bottom--left
       %ul.pc-header-nav
