--- a/app/views/items/search.html.haml
+++ b/app/views/items/search.html.haml
@@ -5,9 +5,13 @@
   .search__body-container
     = render "search-side-bar"
     .search__content
-      %h2.search__content-title 検索結果４０件
-      .search__content-item
-        - 20.times do
+      - if @search_data.present?
+        %h2.search__content-title
+          = "検索結果 1〜#{@search_count}"
+        .search__content-item
           = render 'search-item-box'
+      - else
+        %h2.search__content-title 検索結果 0件
+        .search__content-item 該当する商品が見つかりません。商品は毎日増えていますので、これからの出品に期待してください。
 
 = render 'footer'
