--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -1,6 +1,6 @@
 .header
   .header-top
-    = image_tag("logo.svg",alt: "logo",class: "header-top__title")
+    = link_to image_tag('logo.svg', alt:"mercari", class: 'header-top__title'), root_path
     = search_form_for(@q, url:items_search_path) do |f|
       = f.search_field :name_cont, placeholder: "キーワードから探す", class: "header-top__search"
       %button.icon-search{type:"submit"}
