--- a/app/assets/stylesheets/items/search-side-bar.scss
+++ b/app/assets/stylesheets/items/search-side-bar.scss
@@ -5,7 +5,7 @@
   &__detail {
     position: relative;
   }
-  &_top {
+  &__top {
     position: absolute;
     top: 0;
     left: 0;
@@ -14,5 +14,15 @@
     opacity: 1;
     position: static;
     width: auto;
+    &-select {
+      width: 100%;
+      background-color: $white;
+      text-align: left;
+      height: 48px;
+      padding: 0 16px;
+      border: 1px solid #ccc;
+
+
+    }
   }
 }
