--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -2,7 +2,7 @@
   .header-top
     = link_to image_tag('logo.svg', alt:"mercari", class: 'header-top__title'), root_path
     = search_form_for(@q, url:items_search_path) do |f|
-      = f.search_field :name_cont, placeholder: "キーワードから探す", class: "header-top__search"
+      = f.search_field :name_or_brand_name_or_category_name_cont_all, placeholder: "キーワードから探す", class: "header-top__search"
       %button.icon-search{type:"submit"}
         = fa_icon 'search'
   .header-bottom
